2019. 8. 9. Renamed zMShape3DReadZTK and zMShape3DPrintFile to zMShape3DScanZTK and zMShape3DPrintZTK, respectively. [zeo_mshape]
2019. 8. 9. Modified API of zShape3DFromZTK. [zeo_shape, zeo_mshape]
2019. 8. 9. Added zShape3DArrayFind. [zeo_shape]
2019. 8. 9. Added zOpticalInfoArrayFind. [zeo_optic]
2019. 8. 8. Debugged _zShape3DFScan. [zeo_shape]
2019. 7.28. Reflected renaming of zNameDestroy to zNameFree. [zeo_optic, zeo_shape, zeo_map]
2019. 7.26. Added prototypes of zVec6DFromZTK, zMat3DFromZTK, zFrame3DFromZTK and zFrame3DDHFromZTK. [zeo_vec6d, zeo_mat3d, zeo_frame]
2019. 7.26. Renamed zAxisExpr, zAxisByStr and zDirExpr to zAxisStr, zAxisFromStr and zDirStr, respectively. [zeo_misc, zeo_shape]
2019. 7.26. Added zFrame3DFromZTK and zFrame3DDHFromZTK. [zeo_frame]
2019. 7.26. Added zMat3DFromZTK. [zeo_mat3d]
2019. 7.26. Added zVec6DFromZTK. [zeo_vec6d]
2019. 7.25. Renamed zTerraFree to zTerraDestroy. [zeo_map_terra]
2019. 7.25. Renamed zeo_terra to zeo_map_terra. [zeo_map_terra]
2019. 7.25. Redesigned zMap class and added zMapNet class. [zeo_map, zeo_mapnet]
2019. 7.24. Modified _zShape3DTypeFromZTK. [zeo_shape]
2019. 7.24. Modified _zShape3DOpticFromZTK to ignore unidentified optical info. [zeo_shape]
2019. 7.24. Modified zSphere3DFit. [zeo_shape_sphere]
2019. 7.24. Debugged zeo_shape_ellips3d_com. [zeo_shape_ellips]
2019. 7.24. Debugged zCyl3DInertia. [zeo_shape_cyl]
2019. 7.24. Added _zMat3DSqrNorm, zMat3DSqrNorm, _zMat3DNorm and zMat3DNorm. [zeo_mat3d]
2019. 7.24. Debugged zCone3DInertia. [zeo_shape_cone]
2019. 7.24. Added zVec3DOrthoNormalSpace. [zeo_vec3d]
2019. 7.23. Debugged _zShape3DTypeFromZTK. [zeo_shape]
2019. 7.23. Added z*3DAlloc. [zeo_shape_box, zeo_shape_sphere, zeo_shape_cyl, zeo_shape_cone, zeo_shape_ellips, zeo_shape_ecyl, zeo_shape_ph, zeo_shape_nurbs]
2019. 7.23. Added _alloc member in zShape3DCom and debugged _zShape3DTypeFromZTK and zShape3DFScan. [zeo_shape]