@@ -78,7 +78,7 @@ int main(int argc, char *argv[])
   if( argc < 2 ) usage( argv[0] );
   sfx = zGetSuffix( argv[1] );
   if( sfx && strcmp( sfx, ZEDA_ZTK_SUFFIX ) == 0 ){
-    if( !zMShape3DReadZTK( &ms, argv[1] ) ) return 1;
+    if( !zMShape3DScanZTK( &ms, argv[1] ) ) return 1;
     mshape2vlist( &ms, &vl );
   } else{
     zMShape3DInit( &ms );
