@@ -1,4 +1,5 @@
-2019. 8. 9. Renamed zMShape3DReadZTK and zMShape3DPrintFile to zMShape3DScanZTK and zMShape3DPrintZTK, respectively. [zeo_mshape]
+2019. 8. 9. Ported mshape2gp from RoKi apps. [app]
+2019. 8. 9. Renamed zMShape3DReadZTK and zMShape3DPrintFile to zMShape3DScanZTK and zMShape3DPrintZTK, respectively. [zeo_mshape, app]
 2019. 8. 9. Modified API of zShape3DFromZTK. [zeo_shape, zeo_mshape]
 2019. 8. 9. Added zShape3DArrayFind. [zeo_shape]
 2019. 8. 9. Added zOpticalInfoArrayFind. [zeo_optic]
